--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 						</label>
 					</form>
 					<form action="email">
-						<label for="email"> <input type="text" id="email"placeholder="some email" autocomplete"email" required/> </label>
+						<label for="email"> <input type="text" id="email"placeholder="Some Email" autocomplete"email" required/> </label>
 					</form>
 					<form action="commet">
 						<label for="comment">
-							<input type="text" id="commet" placeholder="some comment" />
+							<input type="text" id="commet" placeholder="Some Comment" />
 						</label>
 					</form>
 				</div>
