--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 				</div>
 			</div>
 			<div class="postcard-footer">
-				<button>Send My Postcard</button>
+				<button>
+					<a class="boton" href="">Send My Postcard</a>
+				</button>
 			</div>
 		</div>
 	</body>
